Coverity analysis defect 149999: Data race condition

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • ClusterScalability Sep1-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/s/migration_blocking_operation/multi_update_coordinator.cpp:461: MISSING_LOCK 149999 Accessing "this->this->_abortReason" without holding lock "mongo::MultiUpdateCoordinatorInstance._mutex". Elsewhere, "mongo::MultiUpdateCoordinatorInstance._abortReason" is written to with "MultiUpdateCoordinatorInstance._mutex" held 1 out of 1 times.

            Assignee:
            Adi Zaimi (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: