SERVER-109540 Take lock before reading _abortReason in multi_update_coordinator.cpp (#41257)

GitOrigin-RevId: e620377d71464b1bcd6d6ed66381b8dd4b246703